# fast_api_tech_task

./: .env.example  Dockerfile  README.md  main.py  pyproject.toml  test_main.http
app/: config.py
app/core/: db.py  middleware.py
app/user/: constants.py  dependencies.py  enums.py  schemas.py
app/v1/: router.py  user.py
tests/integration/: test_user_endpoints.py
