[tool.poetry]
name = "fast-api-tech-task"
version = "0.1.0"
description = ""
authors = ["Ivan Yukish <iwan.jukisch@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
motor = "^3.1.2"
uvicorn = "^0.21.1"
loguru = "^0.7.0"
pydantic = {extras = ["dotenv"], version = "^1.10.7"}
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.6"
pytest = "^7.3.1"
httpx = "^0.24.0"
mongomock = "^4.1.2"
mongomock-motor = "^0.0.19"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.10.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
